--- a/index.html
+++ b/index.html
@@ -85,60 +85,60 @@
             <div class="carousel">
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40"
                                 src="./images/food.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">הסעדה</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
                             <p class="cta text-white bg-green"> לצפייה בכל
                                 <span class="u-desktop"> המכרזים</span>
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/clean.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">ניקיון</p>
                             <p class="number">החל מ-<span class="text-green">1,185 </span>מכרזים
                             </p>
                             <p class="cta text-white bg-green"> לצפייה בכל
                                 <span class="u-desktop"> המכרזים</span>
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/trash.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">פנוי פסולת</p>
                             <p class="number">החל מ-<span class="text-green">970 </span>מכרזים
                             </p>
                             <p class="cta text-white bg-green"> לצפייה בכל
                                 <span class="u-desktop"> המכרזים</span>
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/build.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">אחזקת מבנים</p>
                             <p class="number">החל מ-<span class="text-green">1,000 </span>מכרזים
                             </p>
@@ -146,32 +146,32 @@
                                 <span class="u-desktop"> המכרזים</span>
 
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/buss.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">הסעות</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
                             <p class="cta text-white bg-green"> לצפייה בכל
                                 <span class="u-desktop"> המכרזים</span>
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/electric.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">חשמל</p>
                             <p class="number">החל מ-<span class="text-green">970 </span>מכרזים
                             </p>
@@ -179,16 +179,16 @@
                                 <span class="u-desktop"> המכרזים</span>
 
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/truck.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">בנייה</p>
                             <p class="number">החל מ-<span class="text-green">7,000 </span>מכרזים
                             </p>
@@ -196,32 +196,32 @@
                                 <span class="u-desktop"> המכרזים</span>
 
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/idk.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">וראיית כספים</p>
                             <p class="number">החל מ-<span class="text-green">1,500 </span>מכרזים
                             </p>
                             <p class="cta text-white bg-green"> לצפייה בכל
                                 <span class="u-desktop"> המכרזים</span>
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
 
                 <li class="carousel__slide">
-                    <div class="carousel__slide-container">
+                    <!-- <div class="carousel__slide-container"> -->
                         <div class="icon">
                             <img loading="lazy" width="40" height="40" src="./images/clean.webp">
                         </div>
-                        <div class="data">
+                        <!-- <div class="data"> -->
                             <p class="category">מכרזים בתחומים נוספים</p>
                             <p class="number">החל מ-<span class="text-green">970 </span>מכרזים
                             </p>
@@ -229,8 +229,8 @@
                                 <span class="u-desktop"> המכרזים</span>
 
                             </p>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </li>
             </div>
         </section>
@@ -261,11 +261,11 @@
             <!-- <div class="advantage-container"> -->
                 <h4 class="advantage-title">היתרונות שלנו להצלחה העסקית שלכם!</h4>
                 <p class="advantage-text">
-                    מאות הזדמנויות ומכרזים ממשלתיים ובלעדיים שמפורסמים רק אצלנו<br>
+                    מאות הזדמנויות ומכרזים ממשלתיים ובלעדיים שמפורסמים רק אצלנו.<br><br>
                     בניה, הסעדה, אחזקה, ניקיון, הסעות, ראיית חשבון וכספים, פינוי פסולת, מקרקעין, חשמל ועוד... 74 קטגוריות
-                    כלכליות במשק קבלת ההזדמנויות ישירות למייל באמצעות סוכן חכם<br>
+                    כלכליות במשק קבלת ההזדמנויות ישירות למייל באמצעות סוכן חכם.<br><br>
                     מכרזים מותאמים לעסקים קטנים ובינוניים <br>
-                    עשרות קטגוריות בהתאם לענף בו אתם פועלים<br>
+                    עשרות קטגוריות בהתאם לענף בו אתם פועלים.<br><br>
                     ליווי להגשת מכרז ראשון ע"י המומחים שלנו – ללא עלות נוספת ומודיעין עסקי חיוני נוסף לעסק שלך
                 </p>
                 <p class="advantage-dont-miss">
