--- a/index.html
+++ b/index.html
@@ -217,9 +217,11 @@
         <!-- ABOUT SECTION END-->
         <section class="about-section" aria-label="about-section">
             <div class="about-right">
-                <img src="./images/brush.png" alt="למה-1" class="about-right-image" width="430" height="215"
-                    loading="lazy">
-                <div class="centered">
+                <div class="about-right-container show-on-scroll">
+                    <img src="./images/brush.png" alt="למה-1" class="about-right-image" width="430" height="215"
+                        loading="lazy">
+                </div>
+                <div class="centered show-on-scroll">
                     <p class="about-title">יפעת מכרזים</p>
                     <p class="about-subtitle">מערכת המכרזים וההזדמנויות העסקיות המובילה והגדולה בישראל!</p>
                 </div>
@@ -256,7 +258,7 @@
 
         <!-- MOBILE CTA START-->
         <div class="mobile-cta text-white" id="mobile-cta">
-            <a href="tel:072-3944129" class="mobile-cta-right  bg-green">
+            <a href="tel:074-7691374" class="mobile-cta-right  bg-green">
                 <img src="./images/phone.webp" alt="טלפון" class="mobile-cta-right-icon" width="30" height="30"
                     load="lazy">
                 <p class="mobile-cta-title">חייגו <br>לנציג</p>
@@ -287,7 +289,7 @@
         <h5 class="text-white form-main-title">לקבלת גישה לכל המכרזים השאירו פרטים</h5>
         <form id="form" class="form form-main" method="post">
             <input type="hidden" id="uid" name="uid" value="FA470709-56A1-4A8F-BC1C-4643AD78481F">
-            <input type="hidden" id="originatingleadcode" name="originatingleadcode" value="8">
+            <input type="hidden" id="originatingleadcode" name="originatingleadcode" value="48">
             <input type="hidden" id="statuscode" name="statuscode" value="15">
             <input type="hidden" id="term" name="pcfsystemfield50" value="" class="term">
             <input type="hidden" id="campaign" name="pcfsystemfield52" value="" class="campaign">
@@ -295,8 +297,8 @@
             <div class="form-row">
                 <select name="customer" id="customer">
                     <option value="" selected="selected" class="gf_placeholder">האם אתה לקוח קיים?</option>
-                    <option value="yes">כן, מעוניין לקבל שירות</option>
-                    <option value="no">לא, אני רוצה להצטרף</option>
+                    <option value="yes">יש לי מנוי, מעוניין לקבל שירות</option>
+                    <option value="no">אין לי מנוי, מעוניין להצטרף</option>
                 </select>
             </div>
             <div class="form-row">
